Fixing this module

--- a/templates/vhost/vhost_location_proxy.erb
+++ b/templates/vhost/vhost_location_proxy.erb
@@ -33,9 +33,7 @@
     <%= value %>
 <% end -%><% end -%>
 
-<% @location_conditions.each do |condition| -%>
+<% if @location_conditions -%><% @location_conditions.each do |condition| -%>
     <%= condition %>
-<% end -%>
-
+<% end -%><% end -%>
   }
-
